# kikx

./: .gitattributes  .gitignore  CHANGELOG.md  Makefile  README.md  requirements.txt
docs/: core.md
kikx/: main.py  manage.py  test.py  utils.py
kikx/core/: __init__.py  apps_manager.py  auth.py  client.py  config.py  connection.py  console.py  core.py  errors.py  global_config.py  kikx.py  kpm.py  logging.py  logging_config.py  models.py  plugins.py  services.py  setup.py  shortlink.py  storage.py  ui.py  user.py  utils.py
kikx/core/apps/: __init__.py  apps.py
kikx/core/config/: config.py  models.py
kikx/core/func/: __init__.py  func.py  handlers.py  models.py
kikx/core/models/: app_models.py  base.py  kikx_models.py  setting_models.py  user_models.py
kikx/core/routes/: __init__.py  api.py  public.py
kikx/lib/: event.py  hash.py  parser.py  plugins.py  process.py  service.py  utils.py
kikx/lib/services/: k1.py  k2.py  utils.py
kikx/scripts/: setup.py
kikx/services/: README.md
kikx/services/bridge/: main.py
kikx/services/expose/: main.py
kikx/tests/: conftest.py
kikx/www/: index.html
kikxfs/config/: auth.json  kikx.json  services.json
kikxfs/shortlinks/: vi
kikxlib/: README.md  pyproject.toml
kikxlib/kikxlib/app/: fs.py  sys.py
storage/config/: auth.json  kikx.json  services.json
storage/data/: settings.json
storage/home/: test.html
storage/share/: README  cdn-links.txt
storage/shortlinks/: vi
tests/: conftest.py
tests/lib/: test_event.py  test_hash.py  test_utils.py
tools/: build.py  setup.py
(+222 files in other folders)
