[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kikxlib"
version = "0.0.1"
description = "kikx libraries"
authors = [{name="luvbyte", email="lovemelong@protonmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["kikxlib*"]
